tests/fail/expr/nightly/methodcall.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/nightly/methodcall.rs:2:25
  |
2 |     one_assert::assert!("".to_string().len());
  |                         ^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `usize`

error[E0061]: this method takes 0 arguments but 1 argument was supplied
 --> tests/fail/expr/nightly/methodcall.rs:3:28
  |
3 |     one_assert::assert!("".len(1));
  |                            ^^^ - unexpected argument of type `{integer}`
  |
note: method defined here
 --> $RUST/core/src/str/mod.rs
  |
  |     pub const fn len(&self) -> usize {
  |                  ^^^
help: remove the extra argument
  |
3   -     one_assert::assert!("".len(1));
3   +     one_assert::assert!("".len());
    |

error[E0308]: mismatched types
 --> tests/fail/expr/nightly/methodcall.rs:3:25
  |
3 |     one_assert::assert!("".len(1));
  |                         ^^^^^^^^^ expected `bool`, found `usize`

error[E0689]: can't call method `len` on ambiguous numeric type `{integer}`
 --> tests/fail/expr/nightly/methodcall.rs:4:27
  |
4 |     one_assert::assert!(1.len());
  |                           ^^^
